--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,12 @@
       "(3,)\n",
       "[1 2 3]\n",
       "int64\n",
-      "1\n"
+      "1\n",
+      "3\n",
+      "8\n",
+      "3\n",
+      "[ 1  2 21]\n",
+      "[  3   8 105]\n"
      ]
     }
    ],
@@ -51,7 +56,14 @@
     "print(a.shape)\n",
     "print(a)\n",
     "print(a.dtype) # data type\n",
-    "print(a.ndim) # no. of dimensions"
+    "print(a.ndim) # no. of dimensions\n",
+    "print(a.size)\n",
+    "print(a.itemsize) # returns size in bytes\n",
+    "print(a[2])\n",
+    "a[2] = 21\n",
+    "print(a)\n",
+    "b = a * np.array([3,4,5])\n",
+    "print(b)"
    ]
   },
   {
