--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -68,6 +68,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 34, 45, 34]\n",
+      "[23 34 45]\n",
+      "[1123  234  155]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# python lists and arrays\n",
+    "list = [23,34,45]\n",
+    "np_array = np.array([23, 34,45])\n",
+    "list.append(34)\n",
+    "print(list)\n",
+    "\n",
+    "print(np_array)\n",
+    "np_array = np_array + np.array([100]) # adds 100 to each value\n",
+    "np_array =  np_array + np.array([1000, 100, 10]) # have arrays of equal size and shape\n",
+    "print(np_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
