Dot product in numpy

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -137,6 +137,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dot product\n",
+    "l1 = [1,2,3]\n",
+    "l2 = [4,5,6]\n",
+    "\n",
+    "dot = 0\n",
+    "for i in range(len(l1)):\n",
+    "    dot += l1[i] * l2[i]\n",
+    "print(dot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(32)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dot product in numpy\n",
+    "a1 = np.array(l1)\n",
+    "a2 = np.array(l2)\n",
+    "dot = np.dot(a1, a2)\n",
+    "dot"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
