Dot product in numpy

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -185,6 +185,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(32)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# alternatively\n",
+    "dot = a1 * a2\n",
+    "dot = np.sum(dot)\n",
+    "dot"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
