Dot product in numpy

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -185,25 +185,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.int64(32)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n",
+      "32\n"
+     ]
     }
    ],
    "source": [
     "# alternatively\n",
-    "dot = a1 * a2\n",
-    "dot = np.sum(dot)\n",
-    "dot"
+    "dot = (a1 * a2).sum()\n",
+    "print(dot)\n",
+    "\n",
+    "# another option\n",
+    "dot = a1 @ a2\n",
+    "print(dot)"
    ]
   },
   {
