Multi-dimensional arrays

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -204,7 +204,36 @@
     "\n",
     "# another option\n",
     "dot = a1 @ a2\n",
-    "print(dot)"
+    "print(dot)\n",
+    "\n",
+    "# numpy arrays are a lot faster than python list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multi-dimensional arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "(3, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1,3,3],[2,3,3], [4,2,2]])\n",
+    "print(a.ndim)\n",
+    "print(a.shape) # (rows, columns)"
    ]
   },
   {
