Calculate inverse and determinant and diagonal matrix

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -226,14 +226,58 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "(3, 3)\n"
+      "(3, 3)\n",
+      "[np.int64(4)]\n"
      ]
     }
    ],
    "source": [
     "a = np.array([[1,3,3],[2,3,3], [4,2,2]])\n",
     "print(a.ndim)\n",
-    "print(a.shape) # (rows, columns)"
+    "print(a.shape) # (rows, columns)\n",
+    "print([a[2][0]]) # same as print([a[2,0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2]\n",
+      "[1 3]\n",
+      "[[1 2]\n",
+      " [3 3]]\n",
+      "[[ 7. -3.]\n",
+      " [-2.  1.]]\n",
+      "1.0\n",
+      "[1 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# slicing\n",
+    "# to return column 0 only\n",
+    "print(a[:,0])\n",
+    "# return whole first row\n",
+    "print(a[0,:])\n",
+    "\n",
+    "# transpose - swapping its rows with its columns.\n",
+    "print(a.T)\n",
+    "\n",
+    "# calculate inverse - must be square\n",
+    "a = np.array([[1,3],[2,7]])\n",
+    "print(np.linalg.inv(a))\n",
+    "\n",
+    "# calculate determinant\n",
+    "print(np.linalg.det(a))\n",
+    "\n",
+    "# calculate diagonal matrix\n",
+    "print(np.diag(a))\n",
+    "\n"
    ]
   },
   {
