--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -282,6 +282,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 7 8]\n",
+      " [3 4 9 5]]\n",
+      "[2 7 8]\n",
+      "[2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# slicing\n",
+    "x = np.array([[1,2,7,8], [3,4,9,5]])\n",
+    "print(x)\n",
+    "\n",
+    "# integer array indexing\n",
+    "b = x[0,1:]\n",
+    "print(b)\n",
+    "\n",
+    "c = x[:, 1] # to get columns\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
